--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@
 # Copy this file to .env and fill in your keys
 
 # Default model to use
-#DEFAULT_AI_MODEL=gemini
-#DEFAULT_AI_MODEL=openai
-DEFAULT_AI_MODEL=groq  # Fastest
+AI_PROVIDER=cerebras
+#AI_PROVIDER=gemini
+#AI_PROVIDER=groq  # Fastest
+#AI_PROVIDER=openai
 
 # Google Gemini API Key (Optional, if you want to use Gemini models)
 GEMINI_API_KEY=your_gemini_api_key_here
@@ -19,3 +20,7 @@ OPENAI_MODEL=gpt-4o-mini
 # Groq API Key (Optional, if you want to use Groq models)
 GROQ_API_KEY=your_groc_api_key_here
 GROQ_MODEL=openai/gpt-oss-20b
+#GROQ_MODEL=openai/gpt-oss-120b
+
+CEREBRAS_API_KEY=your_cerebras_api_key_here
+CEREBRAS_MODEL=gpt-oss-120b
